# ab-test-agent

./: .env.example  .gitignore  pyproject.toml  requirements.txt  start.bat  vercel.json
ab_agent/: main.py
ab_agent/agents/: base.py  config_agent.py  dashboard_chat.py  filter_agent.py  narrative.py  orchestrator.py  sql_agent.py  sql_generator.py  stat_generator.py  validator.py  viz_generator.py
ab_agent/bigquery/: client.py  query_builder.py  schema_inspector.py
ab_agent/core/: config_loader.py  exceptions.py  metric_registry.py  models.py  scheduler.py
ab_agent/db/: database.py  repository.py
ab_agent/integrations/: slack.py  storage.py
ab_agent/pipeline/: analysis_pipeline.py  end_test_pipeline.py  metric_creation_pipeline.py  refresh_pipeline.py
ab_agent/routers/: add_metric.py  analyze.py  dashboard.py  end_test.py  tests.py
ab_agent/stats/: engine.py  engine.py.bak  multiple_testing.py  power.py  tests.py
ab_agent/templates/: add_metric.html  analysis_result.html  base.html  create_test.html  edit_test.html  index.html  result.html  test_detail.html  wizard.html
ab_agent/visualization/: chart_library.py  infographic.py  screenshot.py
config/: settings.yaml
config/metrics/: conversion_rate.yaml
config/sql_templates/: base_experiment.sql.j2
prompts/: filter_agent_system.md  narrative_system.md  orchestrator_system.md  sql_generator_system.md  stat_generator_system.md  validator_system.md  viz_generator_system.md
tests/: conftest.py
tests/integration/: test_stat_full_pipeline.py
tests/unit/: test_metric_registry.py  test_models.py  (+1 more)
